; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/extr_devicetree.c_pinctrl_count_index_with_args.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/extr_devicetree.c_pinctrl_count_index_with_args.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pinctrl_count_index_with_args(%struct.device_node* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device_node*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.device_node* %0, %struct.device_node** %4, align 8
  store i8* %1, i8** %5, align 8
  %10 = load %struct.device_node*, %struct.device_node** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @pinctrl_get_list_and_count(%struct.device_node* %10, i8* %11, i32** %6, i32* %8, i32* %7)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %9, align 4
  store i32 %16, i32* %3, align 4
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %17, %15
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @pinctrl_get_list_and_count(%struct.device_node*, i8*, i32**, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
